# Reinforcement_Learning_DQN_in_Rust_using_Burn

./: .gitignore  Cargo.toml  README.md
old_files/: inference.rs  old_main.rs  scratch.rs  test_copy_q_table.rs  test_dqn_ddqn_main.rs  test_soft_copy.rs  test_tensor_functions.rs  training.rs  training_2.rs
src/: README.md  dqn.rs  environment.rs  main.rs  model.rs  replay_buffer.rs  test_model.rs  training.rs  utils.rs
src/agent/: ddqn.rs  dqn.rs  mod.rs  test_dqn.rs
src/environment/: mod.rs  onedgrid.rs  twodgrid.rs
