[package]
name = "Reinforcement_Learning_DQN_using_Burn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "~0.15", features = ["train", "wgpu", "vision"] }
burn-cuda = "0.15.0"
burn-tch = "0.15.0"
rand = "0.8.5"
csv = "1.3.1"

[env]
LD_LIBRARY_PATH = "/home/temp/Downloads/libtorch/lib"
LIBTORCH = "/home/temp/Downloads/libtorch"